appId: com.duckduckgo.mobile.ios
tags:
    - duckplayer.native

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- runFlow: 
    file: shared/load_serp_url.yaml

# Open Specific Video
- assertVisible: "DuckDuckGo vs Google: 5 Reasons You Should Switch"
- tapOn: "DuckDuckGo vs Google: 5 Reasons You Should Switch"

# Validate Duck Player is Visible
- runFlow: 
    file: shared/duckplayer_is_visible.yaml

# Validate this is SERP View
- assertVisible: "Watch on YouTube"

# Validate Duck Player Closes
- runFlow: 
    file: shared/close_player.yaml