appId: com.duckduckgo.mobile.ios
tags:
    - duckplayer.native

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Open Settings
- runFlow: 
    file: shared/open_settings.yaml

# Turn DuckPlayer off
- tapOn: "Let me choose"
- tapOn: "Don't Show"

# Close Settings
- runFlow: 
    file: shared/close_settings.yaml

# Navigate to a video
# Load Site
- runFlow: 
    file: shared/load_youtube_url.yaml

  # Assert Youtube Search Page opens and open the video
- assertVisible: "DuckDuckGo vs Google: 5 Reasons You Should Switch"
- tapOn: "DuckDuckGo vs Google: 5 Reasons You Should Switch"

# Validate YouTube opens
- assertVisible: "m.youtube.com"

# Assert Duck Player Welcome Pill is present
- assertNotVisible:
    id: duckPlayerWelcomePill

- runFlow: 
    file: shared/load_youtube_url.yaml

# Assert Duck Player Welcome Pill is not present
- assertNotVisible: "Resume in Duck Player"